# RL-Implementations

./: .gitignore  LICENSE  README.md  pyproject.toml
common/buffers/: replaybuffer.py
common/networks/: mlp.py
common/policies/: epsilon_greedy.py  softmax.py
common/utils/: trainer.py
deep_rl/value_based/ddqn/: README.md  agent.py  main.py
deep_rl/value_based/dqn/: README.md  agent.py  main.py  trainer.py
deep_rl/value_based/nfqi/: README.md  agent.py  main.py  trainer.py
function_approximation/: QNetwork.py
function_approximation/value_based/fqn/: README.md  agent.py  network.py  train.py  trainer.py
function_approximation/value_based/nfqi/: README.md  agent.py  main.py  trainer.py
results/doubledqn/cartpole/: cartpole_best.pth
results/dqn/acrobot/: acrobot_best.pth
results/dqn/cartpole/: cartpole_best.pth
results/dqn/lunarlander/: lunarlander_best.pth
rl_implementations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
runs/Jul01_10-11-25_kuntima-MS-7C95/: events.out.tfevents.1782893485.kuntima-MS-7C95.2606773.0
runs/Jul01_10-11-59_kuntima-MS-7C95/: events.out.tfevents.1782893519.kuntima-MS-7C95.2607360.0
runs/Jul01_10-12-37_kuntima-MS-7C95/: events.out.tfevents.1782893557.kuntima-MS-7C95.2608026.0
runs/Jul01_10-13-50_kuntima-MS-7C95/: events.out.tfevents.1782893630.kuntima-MS-7C95.2609350.0
runs/Jul01_10-17-12_kuntima-MS-7C95/: events.out.tfevents.1782893832.kuntima-MS-7C95.2612495.0
runs/Jul01_10-18-11_kuntima-MS-7C95/: events.out.tfevents.1782893891.kuntima-MS-7C95.2613526.0
tests/: test_fqn.py
(+859 files in other folders)
